finish hit_triangle

--- a/hw4/hw4.vcxproj.filters
+++ b/hw4/hw4.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Ray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="variable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
