--- a/hw4/hw4.vcxproj
+++ b/hw4/hw4.vcxproj
@@ -143,6 +143,7 @@
   <ItemGroup>
     <ClInclude Include="main.h" />
     <ClInclude Include="Ray.h" />
+    <ClInclude Include="variable.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
